2016-01-30  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/unix/sysv/linux/tile/sysdep-cancel.h (__pthread_get_pc):
	New function.

	* sysdeps/unix/sysv/linux/microblaze/sysdep-cancel.h
	(__pthread_get_pc): New function.

	* sysdeps/unix/sysv/linux/m68k/sysdep-cancel.h (__pthread_get_pc):
	New function.

	* sysdeps/unix/sysv/linux/alpha/sysdep-cancel.h (__pthread_get_pc):
	New function.

	* nptl/nptl-init.c (sigaddset_cancel): New macro.
	(sigcancel_handler): Use sigaddset_cancel instead of __sigaddset.
	* sysdeps/unix/sysv/linux/ia64/sysdep-cancel.h (__pthread_get_pc):
	New function.
	(sigaddset_cancel): New macro.

	* sysdeps/unix/sysv/linux/s390/s390-32/sysdep-cancel.h
	(__pthread_get_pc): New function.
	* sysdeps/unix/sysv/linux/s390/s390-64/sysdep-cancel.h
	(__pthread_get_pc): Likewise.

	* sysdeps/unix/sysv/linux/arm/syscall_cancel.S: New file.
	* sysdeps/unix/sysv/linux/arm/sysdep-cancel.h (__pthread_get_pc):
	New function.

	* sysdeps/unix/sysv/linux/aarch64/sysdep-cancel.h
	(__pthread_get_pc): New function.

	* sysdeps/unix/sysv/linux/powerpc/syscall_cancel.S: New file.
	* sysdeps/unix/sysv/linux/powerpc/sysdep-cancel.h
	(__pthread_get_pc): New function.

	* sysdeps/i386/nptl/tls.h (THREAD_ATOMIC_BIT_SET): Remove macro.
	* sysdeps/unix/sysv/linux/i386/Makefile
	[$(subdir) = elf] (sysdep-rtld_routines): Add libc-do-syscall object.
	* sysdeps/unix/sysv/linux/i386/fcntl.c (NO_CANCELLATION): Replace
	by IS_IN (rtld).
	* sysdeps/unix/sysv/linux/i386/lowlevellock.h (lll_wait_tid): Use
	cancellable futex syscall macro.
	* sysdeps/unix/sysv/linux/i386/syscall_cancel.S: New file.
	* sysdeps/unix/sysv/linux/i386/sysdep-cancel.h (__pthread_get_pc):
	New function.

	* sysdeps/unix/sysv/linux/x86_64/x32/sysdep.h (__syscall_arg_t):
	Define type for x32.
	(__SSC): Add platform specific macro.

	* sysdeps/unix/sysv/linux/x86_64/cancellation.S: Remove file.
	* sysdeps/unix/sysv/linux/x86_64/libc-cancellation.S: Remove file.